name:                vaultenv
version:             0.4.0
synopsis:            Runs processes with secrets from HashiCorp Vault
homepage:            https://github.com/channable/vaultenv
build-type:          Simple
license:             BSD3
license-file:        LICENSE
cabal-version:       >=1.10

executable vaultenv
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

  build-depends:       base                 < 5.0
                     , async                < 2.2
                     , bytestring           < 0.11
                     , http-conduit         < 2.3
                     , lens                 < 4.16
                     , lens-aeson           < 1.1
                     , optparse-applicative < 0.14
                     , random               < 1.2
                     , text                 < 1.3
                     , unordered-containers < 0.3
                     , unix                 < 2.8
                     , utf8-string          < 1.1
