cabal-version: 2.3
name: vaultenv
version: 0.13.1
synopsis: Runs processes with secrets from HashiCorp Vault
homepage: https://github.com/channable/vaultenv#readme
bug-reports: https://github.com/channable/vaultenv/issues
build-type: Simple

source-repository head
  type: git
  location: https://github.com/channable/vaultenv

common sanity
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-exported-signatures
    -Wpartial-fields

common deps
  build-depends:
    aeson,
    async,
    base,
    bytestring,
    connection,
    containers,
    directory,
    dotenv,
    http-client,
    http-conduit,
    megaparsec,
    optparse-applicative,
    parser-combinators,
    retry,
    text,
    unix,
    unordered-containers,

library
  import: deps, sanity
  hs-source-dirs: src
  exposed-modules:
    Config
    SecretsFile
  other-modules:
    Paths_vaultenv

executable vaultenv
  import: deps, sanity

  main-is: app/Main.hs
  other-modules:
    Paths_vaultenv
  build-depends:
    vaultenv

test-suite vaultenv-test
  import: deps, sanity

  type: exitcode-stdio-1.0
  main-is: Spec.hs

  build-depends:
    QuickCheck,
    hspec,
    hspec-discover,
    hspec-expectations,
    http-client,
    http-conduit,
    vaultenv

  other-modules:
    ConfigSpec
    SecretFileSpec
    Paths_vaultenv

  hs-source-dirs:
    test

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
